# requests-base

./: .flake8  .gitignore  .python-lint  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: linting.yml
docs/: index.md
requests_base/: __init__.py  requests_base.py
tests/: requests_base_test.py
