[tool.poetry]
name = "requests-base"
version = "0.1.0"
description = ""
authors = ["Michael Tinsley <michaeltinsley@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
isort = "^5.9.2"
flake8 = "^3.9.2"
pylint = "^2.9.5"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
